<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackgroundColor"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.FinalSignUp">
    <!--tools:showIn="@layout/activity_final_sign_up"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <!--<ImageView-->
    <!--android:id="@+id/hat"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:src="@drawable/white_hat" />-->

    <TextView
        android:id="@+id/appName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/level"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelTextView"
        android:background="@color/white"
        android:prompt="@string/select_level"
        android:spinnerMode="dialog"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/collegeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/level"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/college"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/collegeTextView"
        android:background="@color/white"
        android:prompt="@string/select_college"
        android:spinnerMode="dialog"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/schoolTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/college"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/school"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schoolTextView"
        android:background="@color/white"
        android:prompt="@string/select_school"
        android:spinnerMode="dialog"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deptTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/school"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/dept"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deptTextView"
        android:background="@color/white"
        android:text="@string/select_dept"
        android:gravity=""
        android:textSize="15sp" />

    <TextView
        android:id="@+id/coursesTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dept"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/courses"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coursesTextView"
        android:background="@color/white"
        android:gravity=""
        android:text="@string/select_course"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courses"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>