<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/splashBackgroundColor"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SignIn"
    tools:showIn="@layout/activity_signin"><!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <ImageView
        android:id="@+id/hat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/white_hat" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_below="@id/hat"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>


    <TextView
        android:id="@+id/idNumberTextView"
        android:layout_below="@id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_number"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/idNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/idNumberTextView"
        android:layout_below="@id/appName"
        android:hint="@string/hint_id_number"
        android:inputType="number"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="5dp" />

    <TextView
        android:id="@+id/pinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@id/idNumberTextView"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pin"
        android:inputType="numberPassword"
        android:textSize="23sp"
        android:padding="5dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/pinTextView"
        android:layout_toRightOf="@+id/idNumberTextView"
        android:layout_toEndOf="@+id/idNumberTextView" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@id/pinTextView"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

</RelativeLayout>
