<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/splashBackgroundColor"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SignUpSuccess"
    tools:showIn="@layout/activity_sign_up_success">

    <TextView
        android:id="@+id/appName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/appMotto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/motto"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/appName"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/congratTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrat"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/appMotto"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/settingUpTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingUp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/congratTextView"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</RelativeLayout>
