<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.trialproject.lexis.theacademicpartnertrial.activities.TimetableByDay"
    tools:showIn="@layout/activity_timetable_by_day">

    <Button
        android:id="@+id/monday_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_layout"
        android:padding="10dp"
        android:text="@string/monday"
        android:gravity="left"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/upImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src= "@drawable/plus"
        android:/>

    <Button
        android:id="@+id/tuesday_button"
        android:layout_width="match_parent"
        android:background="@drawable/button_layout"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:gravity="left"
        android:layout_below="@id/monday_button"
        android:textColor="@color/white"
        android:text="@string/tuesday"
        android:textSize="40sp" />

    <Button
        android:id="@+id/wednesday_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:layout_marginLeft="5dp"
        android:gravity="left"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_below="@+id/tuesday_button"
        android:text="@string/wednesday"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/thursday_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@drawable/button_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_below="@+id/wednesday_button"
        android:text="@string/thursday"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/friday_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:layout_marginLeft="5dp"
        android:gravity="left"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_below="@id/thursday_button"
        android:text="@string/friday"
        android:textColor="@color/white"
        android:textSize="40sp" />

</RelativeLayout>
